--- a/styles.css
+++ b/styles.css
@@ -2,46 +2,45 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightgray;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #333333;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    }
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-    div {
-        align-items: center;
-        background-color: white;
-        flex-shrink: 1;
-    }
-    #image{
-        max-width: 100%;
-        display: block;
-        height: auto;
-        margin: 0 auto;
-    }
-    ul{
-        display: flexbox;
-        max-width: 500px;
-        min-width: auto;
-        line-height: 45px;
-        font-size: 1rem;
-    }
-    em {
-        margin-left: 150px;
-        margin-right: 150px;
-        line-height: 30px;
-        font-size: 1rem;
-        max-width: 500px;
-        min-width: auto;
-    }
-    #lin{
-        margin-top: 100px;
-        font-size: 1.5rem;
-        margin-left: 50px;
-        margin-right: 50px;
-    }
+    font-family: Arial, Helvetica, sans-serif;
+    color: #2e2d2d;
+    background-color: rgb(241, 239, 239);
+    max-width: auto;
+}
+header {
+    font-size: 50px;
+}
+figure {
+    align-items: center;
+    background-color: white;
+}
+img{
+    display: block;
+}
+#image {
+    max-width: 100%;
+    height: auto;
+    align-items: center;
+}
+#sub{
+    font-size: 25px;
+}
+ul{
+    max-width: 600px;
+    min-width: auto;
+    line-height: 40px;
+}
+em {
+    margin-left: 150px;
+    margin-right: 150px;
+    line-height: 30px;
+    max-width: 600px;
+}
+#tribute{
+    display: flex;
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 70px;
+    margin-right: 70px;
+    font-size: 20px;
+}
